@@ -1,3 +1,8 @@
+Sat Jan 30 00:27:14 1999  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* munge.c (create_queue): Make sure that malloc succeeds.
+	Reported by OKUJI Yoshinori <okuji@kuicr.kyoto-u.ac.jp>.
+
 1998-10-24  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* users.c (open_hook): Assert DTR if NO_CARRIER, even for CLOCAL.
